--- a/readme.org
+++ b/readme.org
@@ -5,7 +5,7 @@
 #+DESCRIPTION: 
 #+KEYWORDS: react-native
 #+LANGUAGE:  en
-#+OPTIONS:   num:t toc:t ::t |:t ^:{} -:t f:t *:t <:t
+#+OPTIONS:   num:t toc:nil ::t |:t ^:{} -:t f:t *:t <:t
 #+OPTIONS:   tex:t d:nil todo:t pri:nil tags:nil
 #+OPTIONS:   timestamp:t
 
@@ -60,7 +60,10 @@
 #+BEAMER_HEADER: \usepackage{tikz}
 
 #+BEAMER_HEADER: \AtBeginSection[]{
-#+BEAMER_HEADER: \begin{frame}<beamer>\frametitle{Topic}\tableofcontents[currentsection]\end{frame}
+#+BEAMER_HEADER: \begin{frame}<beamer>\frametitle{Table of Contents}\begin{columns}[t]
+#+BEAMER_HEADER: \begin{column}{.5\textwidth}\tableofcontents[currentsection,sections={1-3}]\end{column}
+#+BEAMER_HEADER: \begin{column}{.5\textwidth}\tableofcontents[currentsection,sections={4-7}]\end{column}
+#+BEAMER_HEADER: \end{columns}\end{frame}
 #+BEAMER_HEADER: \subsection{}
 #+BEAMER_HEADER: }
 #+BEAMER_HEADER: \hypersetup{colorlinks=true, linkcolor=blue}
@@ -377,28 +380,255 @@ export default class FlexDirectionBasics extends Component {
     #+caption: justifyContent
     [[file:figures/justcont.png]]
 
-*** Align Items
+*** Align
+- ~alignItems~ describes how to align children along the cross axis of their container.
+- ~alignSelf~ has the same options and effect as alignItems but instead of affecting the children within a container.
+- ~alignContent~ defines the distribution of lines along the cross-axis.
+#+caption: align
+#+attr_latex: :width 0.4\textwidth
+[[file:figures/align.png]]
 
-*** Align Self
-
-*** Align Content
 
 *** Flex Wrap
+- The ~flexWrap~ property is set on containers and controls what happens when children overflow the size of the container along the main axis. 
 
-*** Flex Advanced
-
-*** Width and Height
-
-*** Absolute & Relative Layout
-
-*** 
+#+caption: Flex Wrap
+#+attr_latex: :width 0.4\textwidth
+[[file:figures/flexwrap.png ]]
 
 * Handling Components
 ** Handling Text Input
+*** Handling Text Input
+- ~TextInput~ is a Core Component that allows the user to enter text.
+  - ~onChangeText~ prop is called every time the text changed,
+  - ~onSubmitEditing~ prop is called when the text is submitted.
+#+BEGIN_SRC js
+import React, { Component } from 'react';
+import { Text, TextInput, View } from 'react-native';
+
+export default class PizzaTranslator extends Component {
+  constructor(props) { super(props); this.state = {text: ''}; }
+
+  render() {
+    return (
+      <View style={{padding: 10}}>
+        <TextInput style={{height: 40}} placeholder="Type here to translate!"
+          onChangeText={(text) => this.setState({text})} value={this.state.text} />
+        <Text style={{padding: 10, fontSize: 42}}>
+          {this.state.text.split(' ').map((word) => word && 'pizza').join(' ')}
+        </Text>
+      </View>
+    );
+  }
+}
+#+END_SRC
+
 ** Handling Touches
+
+*** Handling Touches
+
+**** Touch button code                                                :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.7
+     :END:
+#+BEGIN_SRC js
+import React, { Component } from 'react';
+import { Button, StyleSheet, View } from 'react-native';
+
+export default class ButtonBasics extends Component {
+  _onPressButton() { alert('You tapped the button!') }
+
+  render() {
+    return (
+      <View style={styles.container}>
+          <Button onPress={this._onPressButton} title="Press Me" />
+      </View>
+    );
+  }
+}
+
+const styles = StyleSheet.create({
+  container: { flex: 1, justifyContent: 'center' },
+  buttonContainer: { margin: 20 },
+  alternativeLayoutButtonContainer: {
+    margin: 20,
+    flexDirection: 'row',
+    justifyContent: 'space-between'
+  }
+});
+
+#+END_SRC
+
+**** Button example                                                   :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.3
+     :END:
+
+#+caption: Touch button
+[[file:figures/touch.png]]
+
+*** Buttons and props
+
+**** Kinds of buttons                                                 :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.5
+     :END:
+- Kinds of buttons
+  - ~TouchableHighlight~ background will be darkened when the user presses down on the button.
+  - ~TouchableNativeFeedback~ on Android to display ink surface reaction ripples.
+  - ~TouchableOpacity~ provides feedback by reducing the opacity of the button.
+  - ~TouchableWithoutFeedback~ does not provide any feedback.
+
+**** Button's properties                                              :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.5
+     :END:
+- Button's properties
+  - ~onPress~  is called by pressing a button.
+  - ~onLongPress~ detect when a user presses and holds a view.
+
+
 ** Using a ScrollView
+
+***  ScrollView
+- ~ScrollView~ is a generic scrolling container that can contain multiple components and views.
+  - ~ViewPager~ provides swiping horizontally between views.
+  - ~ScrollView~ works best to present a small amount of things of a limited size.
+  - If you have a long list of more items than can fit on the screen, you should use a ~FlatList~.
+#+BEGIN_SRC js
+import React, { Component } from 'react';
+import { Button, StyleSheet, View } from 'react-native';
+
+export default class ScrollExample extends Component {
+  render() {
+    return (
+      <ScrollView>
+      </View>
+    );
+  }
+}  
+#+END_SRC
+
+
 ** Using List Views
 
+*** Using List Views (FlatList)
+
+- ~FlatList~ component displays a scrolling list of changing.
+  - ~FlatList~ works well for long lists of data, where the number of items might change over time.
+#+BEGIN_SRC js
+  import React, { Component } from 'react';
+  import { FlatList, StyleSheet, Text, View } from 'react-native';
+
+  export default class FlatListBasics extends Component {
+    render() {
+      return (
+        <View>
+          <FlatList
+            data={[{key: 'Julie'}]}
+            renderItem={({item}) => <Text>{item.key}</Text>}/>
+        </View>
+      );
+    }
+  }
+#+END_SRC
+
+
+*** SectionList                                                       :BMCOL:
+- ~SectionList~ displays a set of data broken into logical sections, simmilar to ~UITableView~ on iOS.
+#+BEGIN_SRC js
+  import React, { Component } from 'react';
+  import { SectionList, StyleSheet, Text, View } from 'react-native';
+
+  export default class SectionListBasics extends Component {
+      render() {
+          return (
+                  <View style={styles.container}>
+                  <SectionList
+              sections={[
+                  {title: 'D', data: ['Devin', 'Dan', 'Dominic']},
+                  {title: 'J', data: ['Jackson', 'James', 'Jillian', 'Jimmy', 'Joel', 'John', 'Julie']},
+              ]}
+              renderItem={({item}) => <Text style={styles.item}>{item}</Text>}
+              renderSectionHeader={({section}) => 
+                                   <Text style={styles.sectionHeader}>{section.title}</Text>}
+              keyExtractor={(item, index) => index}
+                  />
+                  </View>
+          );
+      }
+  }
+#+END_SRC
+
+
 * Networking
-* More Resources
+
+** Using Fetch
+
+*** Fetching
+- ~Fetch API~ provides an interface for fetching resources (including across the network)
+
+**** Simple fetch example                                             :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.5
+     :END:
+  #+BEGIN_SRC js
+    function getMoviesFromApiAsync() {
+        return 
+            .then((response) => response.json())
+            .then((responseJson) => {
+                return responseJson.movies;
+            })
+            .catch((error) => {
+                console.error(error);
+            });
+    }
+  #+END_SRC
+
+**** Customized fetch                                                 :BMCOL:
+     :PROPERTIES:
+     :BEAMER_col: 0.5
+     :END:
+#+BEGIN_SRC js
+  fetch('https://mywebsite.com/endpoint/', {
+      method: 'POST',
+      headers: {
+          Accept: 'application/json',
+          'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+          firstParam: 'yourValue',
+          secondParam: 'yourOtherValue',
+      }),
+  })
+#+END_SRC
+
+** WebSocket Support
+
+*** WebSocket
+- The ~WebSocket~ object provides the API for creating and managing a WebSocket connection.
+  - sending and receiving data on the connection.
+#+BEGIN_SRC js
+  var ws = new WebSocket('ws://host.com/path');
+
+  ws.onopen = () => {
+      // connection opened
+      ws.send('something'); // send a message
+  };
+
+  ws.onmessage = (e) => {
+      // a message was received
+      console.log(e.data);
+  };
+
+  ws.onerror = (e) => {
+      // an error occurred
+      console.log(e.message);
+  };
+
+  ws.onclose = (e) => {
+      // connection closed
+      console.log(e.code, e.reason);
+  };  
+#+END_SRC
 
