android project was added.

--- a/readme.org
+++ b/readme.org
@@ -503,7 +503,7 @@ export default class ScrollExample extends Component {
   render() {
     return (
       <ScrollView>
-      </View>
+      </ScrollView>
     );
   }
 }  
