--- a/common/options.tex
+++ b/common/options.tex
@@ -45,10 +45,10 @@
 }
 
 \lstdefinelanguage{JavaScript}{
-  keywords={for,typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywords={for,typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, constructor, async},
   keywordstyle=\color{blue}\bfseries,
-  ndkeywords={class, export, boolean, throw, implements, import, this},
-  ndkeywordstyle=\color{darkgray}\bfseries,
+  ndkeywords={class, export, boolean, throw, implements, import, this, extends},
+  ndkeywordstyle=\color{purple}\bfseries,
   identifierstyle=\color{black},
   sensitive=false,
   comment=[l]{//},
